--- a/src/main/resources/io/github/nhtuan10/mykafkatool/editable-table.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/editable-table.fxml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-
 <!-- fx:controller="control.ui.io.github.nhtuan10.mykafkatool.EditableTableControl" -->
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <fx:root prefHeight="437.0" prefWidth="730.0" type="AnchorPane" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
 
@@ -65,7 +56,7 @@
                               <Insets bottom="5.0" left="5.0" top="5.0" />
                            </padding>
                         </HBox>
-                        <Label fx:id="noRowsLabel" text="0 Rows">
+                         <Label fx:id="numberOfRowsLabel" text="0 Rows">
                            <HBox.margin>
                               <Insets left="10.0" top="5.0" />
                            </HBox.margin>
