--- a/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
@@ -66,7 +66,7 @@
                                                     <items>
                                                         <AnchorPane maxHeight="150.0" minHeight="50.0" minWidth="0.0">
                                                             <children>
-                                                                <FlowPane prefHeight="101.0" prefWidth="993.0"
+                                                                <FlowPane prefHeight="60.0" prefWidth="993.0"
                                                                           AnchorPane.bottomAnchor="0.0"
                                                                           AnchorPane.leftAnchor="0.0"
                                                                           AnchorPane.rightAnchor="0.0"
@@ -80,7 +80,7 @@
                                                                                 <Insets left="10.0" top="5.0"/>
                                                                             </FlowPane.margin>
                                                                         </ProgressIndicator>
-                                                                        <Button fx:id="pullMessagesBtn"
+                                                                        <Button fx:id="pollMessagesBtn"
                                                                                 mnemonicParsing="false"
                                                                                 onAction="#pollMessages"
                                                                                 text="Poll Msgs">
@@ -101,18 +101,18 @@
                                                                                 <Insets left="10.0" top="5.0"/>
                                                                             </FlowPane.margin>
                                                                         </Button>
-                                                                        <Label text="Poll Time">
-                                                                            <FlowPane.margin>
-                                                                                <Insets left="10.0" top="5.0"/>
-                                                                            </FlowPane.margin>
-                                                                        </Label>
-                                                                        <TextField fx:id="pollTimeTextField"
-                                                                                   prefHeight="26.0" prefWidth="60.0"
-                                                                                   text="5000">
-                                                                            <FlowPane.margin>
-                                                                                <Insets top="5.0"/>
-                                                                            </FlowPane.margin>
-                                                                        </TextField>
+                                                                        <!--                                                                        <Label text="Poll Time">-->
+                                                                        <!--                                                                            <FlowPane.margin>-->
+                                                                        <!--                                                                                <Insets left="10.0" top="5.0"/>-->
+                                                                        <!--                                                                            </FlowPane.margin>-->
+                                                                        <!--                                                                        </Label>-->
+                                                                        <!--                                                                        <TextField fx:id="pollTimeTextField"-->
+                                                                        <!--                                                                                   prefHeight="26.0" prefWidth="60.0"-->
+                                                                        <!--                                                                                   text="5000">-->
+                                                                        <!--                                                                            <FlowPane.margin>-->
+                                                                        <!--                                                                                <Insets top="5.0"/>-->
+                                                                        <!--                                                                            </FlowPane.margin>-->
+                                                                        <!--                                                                        </TextField>-->
                                                                         <Label text="After">
                                                                             <FlowPane.margin>
                                                                                 <Insets left="10.0" top="5.0"/>
