--- a/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import org.fxmisc.flowless.VirtualizedScrollPane?>
 <?import org.fxmisc.richtext.CodeArea?>
-<AnchorPane prefHeight="661.0" prefWidth="1418.0" xmlns="http://javafx.com/javafx/23.0.1"
+<AnchorPane prefHeight="661.0" prefWidth="1418.0" xmlns="http://javafx.com/javafx/17.0.12"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="io.github.nhtuan10.mykafkatool.ui.controller.MainController">
     <children>
@@ -64,10 +64,12 @@
                                                            AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                                            AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                     <items>
-                                                        <AnchorPane maxHeight="150.0" minHeight="50.0" minWidth="0.0">
+                                                        <AnchorPane maxHeight="50.0" minHeight="39.0" minWidth="0.0"
+                                                                    prefHeight="50.0" prefWidth="993.0">
                                                             <children>
-                                                                <FlowPane prefHeight="60.0" prefWidth="993.0"
-                                                                          AnchorPane.bottomAnchor="0.0"
+                                                                <FlowPane minHeight="40.0" prefHeight="50.0"
+                                                                          prefWidth="993.0"
+                                                                          AnchorPane.bottomAnchor="61.0"
                                                                           AnchorPane.leftAnchor="0.0"
                                                                           AnchorPane.rightAnchor="0.0"
                                                                           AnchorPane.topAnchor="0.0">
@@ -125,11 +127,8 @@
                                                                                         top="5.0"/>
                                                                             </FlowPane.margin>
                                                                         </DateTimePicker>
-                                                                        <Label fx:id="endTimestampLabel" text="Before"
-                                                                               visible="false"/>
-                                                                        <DateTimePicker fx:id="endTimestampPicker"
-                                                                                        disable="true" prefWidth="180.0"
-                                                                                        visible="false"/>
+                                                                        <!--                                                                        <Label fx:id="endTimestampLabel" text="Before" visible="false" />-->
+                                                                        <!--                                                                        <DateTimePicker fx:id="endTimestampPicker" disable="true" prefWidth="180.0" visible="false" />-->
                                                                         <Button fx:id="countMessagesBtn"
                                                                                 mnemonicParsing="false"
                                                                                 onAction="#countMessages"
@@ -183,10 +182,10 @@
                                                                 </FlowPane>
                                                             </children>
                                                         </AnchorPane>
-                                                        <AnchorPane minHeight="50.0" minWidth="0.0" prefHeight="90.0"
-                                                                    prefWidth="993.0">
+                                                        <AnchorPane maxHeight="200.0" minHeight="50.0" minWidth="0.0"
+                                                                    prefHeight="100.0" prefWidth="993.0">
                                                             <children>
-                                                                <HBox prefHeight="202.0" prefWidth="993.0"
+                                                                <HBox prefHeight="100.0" prefWidth="993.0"
                                                                       AnchorPane.bottomAnchor="0.0"
                                                                       AnchorPane.leftAnchor="0.0"
                                                                       AnchorPane.rightAnchor="0.0"
@@ -235,7 +234,8 @@
                                                                 </HBox>
                                                             </children>
                                                         </AnchorPane>
-                                                        <AnchorPane minHeight="50.0" minWidth="0.0">
+                                                        <AnchorPane maxHeight="1.7976931348623157E308" minHeight="50.0"
+                                                                    minWidth="0.0" prefHeight="461.0" prefWidth="993.0">
                                                             <children>
                                                                 <StackPane AnchorPane.bottomAnchor="4.0"
                                                                            AnchorPane.leftAnchor="0.0"
@@ -288,8 +288,7 @@
                                 </Tab>
                                 <Tab fx:id="propertiesTab" text="Properties">
                                     <content>
-                                        <TopicOrPartitionPropertyView
-                                                fx:id="topicOrPartitionPropertyView"></TopicOrPartitionPropertyView>
+                                        <TopicOrPartitionPropertyView fx:id="topicOrPartitionPropertyView"/>
                                         <!--                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"> -->
                                         <!--                                           <children> -->
                                         <!--                                               <Accordion prefHeight="614.0" prefWidth="936.0"> -->
