--- a/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
@@ -84,7 +84,7 @@
                                 <Insets left="10.0" top="5.0"/>
                             </FlowPane.margin>
                         </Button>
-                        <Label text="No Msgs/Partition To Poll">
+                        <Label text="No. of Msgs/Partition To Poll">
                             <FlowPane.margin>
                                 <Insets left="10.0" top="5.0"/>
                             </FlowPane.margin>
