--- a/src/main/resources/io/github/nhtuan10/mykafkatool/style.css
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/style.css
@@ -22,3 +22,28 @@
 .json-start-or-end-object {
     -fx-fill: green;
 }
+
+.error-row {
+    -fx-background-color: lightcoral;
+}
+
+.error-row:selected {
+    -fx-background-color: #C06666;
+}
+
+.table-row-border {
+    -fx-border-color: transparent transparent lightgray transparent;
+}
+
+.index-col-cell {
+    -fx-text-fill: darkgray;
+}
+
+.error-row .index-col-cell {
+    -fx-text-fill: #505050;
+}
+
+.table-view .scroll-bar:vertical > .increment-button,
+.table-view .scroll-bar:vertical > .decrement-button {
+    -fx-padding: 0.5em 0.5em;
+}
