--- a/src/main/resources/io/github/nhtuan10/mykafkatool/topic-or-partition-property-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/topic-or-partition-property-view.fxml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Accordion?>
-<?import io.github.nhtuan10.mykafkatool.ui.control.TopicPartitionsTable?>
 <?import io.github.nhtuan10.mykafkatool.ui.control.TopicOrPartitionPropertyTable?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TitledPane?>
-
-<fx:root type="AnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"  xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1">
+<?import io.github.nhtuan10.mykafkatool.ui.control.TopicPartitionsTable?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<fx:root minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" type="AnchorPane"
+         xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
                                           <children>
                                               <Accordion prefHeight="614.0" prefWidth="936.0">
                                                   <panes>
@@ -48,7 +37,8 @@
                                                             <HBox prefHeight="17.0" prefWidth="911.0">
                                                                <children>
 <!--                                                                   <Button mnemonicParsing="false" onAction="#refreshPartitionsTblAction" prefHeight="26.0" prefWidth="72.0" text="Refresh" /> -->
-                                                                  <Label fx:id="totalMessagesInTheTopicLabel" prefHeight="28.0" prefWidth="106.0" text="0 Messages">
+                                                                   <Label fx:id="totalMessagesInTheTopicLabel"
+                                                                          text="0 Messages">
                                                                      <HBox.margin>
                                                                         <Insets left="10.0" />
                                                                      </HBox.margin>
