--- a/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
@@ -60,6 +60,16 @@
                                 <Insets left="10.0" right="10.0" top="5.0"/>
                             </FlowPane.margin>
                         </DateTimePicker>
+                        <Label text="Before">
+                            <FlowPane.margin>
+                                <Insets left="10.0" top="5.0"/>
+                            </FlowPane.margin>
+                        </Label>
+                        <DateTimePicker fx:id="endTimestampPicker" prefWidth="180.0">
+                            <FlowPane.margin>
+                                <Insets left="10.0" right="10.0" top="5.0"/>
+                            </FlowPane.margin>
+                        </DateTimePicker>
                         <!--                                                                        <Label fx:id="endTimestampLabel" text="Before" visible="false" />-->
                         <!--                                                                        <DateTimePicker fx:id="endTimestampPicker" disable="true" prefWidth="180.0" visible="false" />-->
                         <Button fx:id="countMessagesBtn" mnemonicParsing="false" onAction="#countMessages"
