--- a/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
@@ -11,9 +11,9 @@
          type="SplitPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
          AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
     <items>
-        <AnchorPane maxHeight="70.0" minHeight="40.0" minWidth="0.0" prefHeight="50.0" prefWidth="993.0">
+        <AnchorPane maxHeight="83.0" minHeight="40.0" minWidth="0.0" prefHeight="83.0" prefWidth="993.0">
             <children>
-                <FlowPane minHeight="40.0" prefHeight="50.0" prefWidth="993.0" AnchorPane.bottomAnchor="61.0"
+                <FlowPane minHeight="40.0" prefHeight="83.0" prefWidth="993.0" AnchorPane.bottomAnchor="0.0"
                           AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
                         <ProgressIndicator fx:id="isPollingMsgProgressIndicator" prefHeight="31.0" prefWidth="26.0"
@@ -85,12 +85,12 @@
                         </Label>
                         <ComboBox fx:id="msgPollingPosition" promptText="LAST">
                             <FlowPane.margin>
-                                <Insets left="5.0"/>
+                                <Insets left="5.0" top="5.0"/>
                             </FlowPane.margin>
                         </ComboBox>
                         <TextField fx:id="maxMessagesTextField" prefHeight="26.0" prefWidth="72.0" text="1000">
                             <FlowPane.margin>
-                                <Insets left="10.0"/>
+                                <Insets left="10.0" top="5.0"/>
                             </FlowPane.margin>
                         </TextField>
                         <!--                                                      <Label text="Filter">-->
