--- a/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import io.github.nhtuan10.mykafkatool.ui.control.DateTimePicker?>
-<?import io.github.nhtuan10.mykafkatool.ui.control.MessageTable?>
+<?import io.github.nhtuan10.mykafkatool.ui.control.KafkaMessageTable?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -166,7 +166,7 @@
                 <StackPane AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="6.0"
                            AnchorPane.topAnchor="0.0">
                     <children>
-                        <MessageTable fx:id="messageTable"/>
+                        <KafkaMessageTable fx:id="kafkaMessageTable"/>
                         <!--                                                                     <TableView fx:id="messageTable"> -->
                         <!--                                                                         <columns> -->
                         <!--                                                                             <TableColumn prefWidth="75.0" text="Partition" /> -->
