--- a/src/main/resources/io/github/nhtuan10/mykafkatool/schema-registry-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/schema-registry-view.fxml
@@ -20,7 +20,8 @@
      <children>
          <VirtualizedScrollPane prefHeight="318.0" prefWidth="934.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <content>
-                <CodeArea fx:id="schemaRegistryTextArea" editable="false" prefHeight="318.0" prefWidth="934.0" style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" wrapText="true" />
+                <CodeArea fx:id="schemaRegistryTextArea" editable="false" prefHeight="318.0" prefWidth="934.0"
+                          wrapText="true"/>
             </content>
          </VirtualizedScrollPane>
      </children>
