--- a/src/main/resources/io/github/nhtuan10/mykafkatool/add-connection-modal.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/add-connection-modal.fxml
@@ -1,58 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.nhtuan10.mykafkatool.ui.controller.AddConnectionModalController">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import org.fxmisc.flowless.VirtualizedScrollPane?>
+<?import org.fxmisc.richtext.CodeArea?>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="io.github.nhtuan10.mykafkatool.ui.controller.AddConnectionModalController">
     <children>
-        <TabPane layoutX="23.0" layoutY="8.0" prefHeight="375.0" prefWidth="569.0" tabClosingPolicy="UNAVAILABLE">
-            <tabs>
-                <Tab text="Connection">
-                    <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                            <children>
-                                <GridPane prefHeight="346.0" prefWidth="569.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                    <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" minWidth="10.0" prefWidth="109.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.0" minWidth="10.0" prefWidth="460.0" />
-                                    </columnConstraints>
-                                    <rowConstraints>
-                                        <RowConstraints maxHeight="104.0" minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="211.0" minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="211.0" minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="211.0" minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="267.0" minHeight="10.0" prefHeight="208.0" vgrow="SOMETIMES" />
-                                    </rowConstraints>
-                                    <children>
-                                        <Label text="Cluster Name" />
-                                        <TextField fx:id="clusterNameTextField" GridPane.columnIndex="1" />
-                                        <Label text="Bootstrap Server" GridPane.rowIndex="1" />
-                                        <TextField fx:id="bootstrapServerTextField" prefHeight="4.0" prefWidth="477.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+        <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0"
+                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                   AnchorPane.topAnchor="0.0">
+            <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                    <children>
+                        <TabPane prefHeight="351.0" prefWidth="598.0" tabClosingPolicy="UNAVAILABLE"
+                                 AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                                 AnchorPane.topAnchor="0.0">
+                            <tabs>
+                                <Tab text="Connection">
+                                    <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                             <children>
-                                                <Button fx:id="addBtn" mnemonicParsing="false" onAction="#add" text="OK" />
-                                                <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+                                                <GridPane prefHeight="346.0" prefWidth="569.0" vgap="10.0"
+                                                          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                                          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                    <columnConstraints>
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0"
+                                                                           minWidth="10.0" prefWidth="109.0"/>
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.0"
+                                                                           minWidth="10.0" prefWidth="460.0"/>
+                                                    </columnConstraints>
+                                                    <rowConstraints>
+                                                        <RowConstraints maxHeight="104.0" minHeight="45.0"
+                                                                        prefHeight="45.0" vgrow="SOMETIMES"/>
+                                                        <RowConstraints maxHeight="211.0" minHeight="45.0"
+                                                                        prefHeight="45.0" vgrow="SOMETIMES"/>
+                                                        <RowConstraints maxHeight="211.0" minHeight="45.0"
+                                                                        prefHeight="45.0" vgrow="SOMETIMES"/>
+                                                        <RowConstraints maxHeight="211.0" minHeight="45.0"
+                                                                        prefHeight="45.0" vgrow="SOMETIMES"/>
+                                                        <RowConstraints maxHeight="267.0" minHeight="10.0"
+                                                                        prefHeight="208.0" vgrow="SOMETIMES"/>
+                                                    </rowConstraints>
+                                                    <children>
+                                                        <Label text="Cluster Name"/>
+                                                        <TextField fx:id="clusterNameTextField"
+                                                                   GridPane.columnIndex="1"/>
+                                                        <Label text="Bootstrap Server" GridPane.rowIndex="1"/>
+                                                        <TextField fx:id="bootstrapServerTextField" prefHeight="4.0"
+                                                                   prefWidth="477.0" GridPane.columnIndex="1"
+                                                                   GridPane.rowIndex="1"/>
+                                                        <Label prefHeight="17.0" prefWidth="102.0"
+                                                               text="Schema Registry" GridPane.rowIndex="2"/>
+                                                        <TextField fx:id="schemaRegistryTextField"
+                                                                   GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                                        <CheckBox fx:id="isOnlySubjectLoadedCheckBox"
+                                                                  mnemonicParsing="false"
+                                                                  text="Load subject names only from Schema Registry"
+                                                                  GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                                                    </children>
+                                                </GridPane>
                                             </children>
-                                        </HBox>
-                              <Label prefHeight="17.0" prefWidth="102.0" text="Schema Registry" GridPane.rowIndex="2" />
-                              <TextField fx:id="schemaRegistryTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <CheckBox fx:id="isOnlySubjectLoadedCheckBox" mnemonicParsing="false" text="Load subject names only from Schema Registry" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                    </children>
-                                </GridPane>
+                                        </AnchorPane>
+                                    </content>
+                                </Tab>
+                                <Tab text="Security">
+                                    <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                            <children>
+                                                <GridPane layoutX="14.0" layoutY="-2.0" prefHeight="346.0"
+                                                          prefWidth="569.0" AnchorPane.bottomAnchor="0.0"
+                                                          AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                                                          AnchorPane.topAnchor="-2.0">
+                                                    <columnConstraints>
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="281.0"
+                                                                           minWidth="10.0" prefWidth="82.0"/>
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.0"
+                                                                           minWidth="10.0" prefWidth="487.0"/>
+                                                    </columnConstraints>
+                                                    <rowConstraints>
+                                                        <RowConstraints maxHeight="110.0" minHeight="0.0"
+                                                                        prefHeight="27.0" vgrow="SOMETIMES"/>
+                                                        <RowConstraints maxHeight="272.0" minHeight="10.0"
+                                                                        prefHeight="267.0" vgrow="SOMETIMES"/>
+                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
+                                                                        vgrow="SOMETIMES"/>
+                                                    </rowConstraints>
+                                                    <children>
+                                                        <Label text="Type"/>
+                                                        <ComboBox fx:id="securityTypeComboxBox" prefWidth="150.0"
+                                                                  GridPane.columnIndex="1"/>
+                                                        <Label text="Configuration" GridPane.rowIndex="1"/>
+                                                        <VirtualizedScrollPane GridPane.columnIndex="1"
+                                                                               GridPane.rowIndex="1">
+
+                                                            <GridPane.margin>
+                                                                <Insets right="5.0"/>
+                                                            </GridPane.margin>
+                                                            <content>
+                                                                <CodeArea fx:id="securityConfigTextArea"
+                                                                          prefHeight="118.0" prefWidth="552.0"
+                                                                          wrapText="true"/>
+                                                            </content>
+                                                        </VirtualizedScrollPane>
+                                                    </children>
+                                                </GridPane>
+                                            </children>
+                                        </AnchorPane>
+                                    </content>
+                                </Tab>
+                            </tabs>
+                            <padding>
+                                <Insets right="5.0"/>
+                            </padding>
+                        </TabPane>
+                    </children>
+                </AnchorPane>
+                <AnchorPane maxHeight="40.0" minHeight="40.0" minWidth="0.0" prefHeight="40.0" prefWidth="598.0">
+                    <children>
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                            <children>
+                                <Button fx:id="addBtn" mnemonicParsing="false" onAction="#add" text="OK">
+                                    <HBox.margin>
+                                        <Insets left="10.0" top="5.0"/>
+                                    </HBox.margin>
+                                </Button>
+                                <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#cancel" text="Cancel">
+                                    <HBox.margin>
+                                        <Insets left="5.0" top="5.0"/>
+                                    </HBox.margin>
+                                </Button>
                             </children>
-                        </AnchorPane>
-                    </content>
-                </Tab>
-            </tabs>
-        </TabPane>
+                        </HBox>
+                    </children>
+                </AnchorPane>
+            </items>
+        </SplitPane>
     </children>
 </AnchorPane>
